# Slicer-T2mapping

./: .gitignore  CMakeLists.txt  README.md  T2mapping_documentation.md
Example_multi_echo_mri/: E3778S4I001.MR.dcm  E3778S4I002.MR.dcm  E3778S4I003.MR.dcm  E3778S4I004.MR.dcm  E3778S4I005.MR.dcm  E3778S4I006.MR.dcm  E3778S4I007.MR.dcm  E3778S4I008.MR.dcm  E3778S4I009.MR.dcm  E3778S4I010.MR.dcm  E3778S4I011.MR.dcm  E3778S4I012.MR.dcm  E3778S4I013.MR.dcm  E3778S4I014.MR.dcm  E3778S4I015.MR.dcm  E3778S4I016.MR.dcm  E3778S4I017.MR.dcm  E3778S4I018.MR.dcm  E3778S4I019.MR.dcm  E3778S4I020.MR.dcm  E3778S4I021.MR.dcm  E3778S4I022.MR.dcm  E3778S4I023.MR.dcm  E3778S4I024.MR.dcm  E3778S4I025.MR.dcm  E3778S4I026.MR.dcm  E3778S4I027.MR.dcm  E3778S4I028.MR.dcm  E3778S4I029.MR.dcm  E3778S4I030.MR.dcm  E3778S4I031.MR.dcm  E3778S4I032.MR.dcm  E3778S4I033.MR.dcm  E3778S4I034.MR.dcm  E3778S4I035.MR.dcm  E3778S4I036.MR.dcm  E3778S4I037.MR.dcm  E3778S4I038.MR.dcm  E3778S4I039.MR.dcm  E3778S4I040.MR.dcm  (+160 more)
T2mapping/: CMakeLists.txt  T2mapping.py  T2mapping_documentation.md
